style.css
/* LIGHT MODE */
:root {
  --background-color: white;
  --text-color: black;
  --border-color: #333;
  --navBar-background-color: #333;
  --navBarA-color: #f2f2f2;
  --grayscale: grayscale(0%);
  /* --dark-mode-button-background-color: rgba(67, 4, 126, 0.562); */
  --dark-mode-button-background-color: rgba(190, 141, 236, 0.562);
}
/* DARK MODE */
[theme="dark"] {
  --background-color: #333;
  --text-color: #f2f2f2;
  --border-color: black;
  --navBar-background-color: black;
  --navBarA-color: white;
  --grayscale: grayscale(30%);
  --dark-mode-button-background-color: rgba(230, 205, 174, 0.5);
}
.aboutText img,
.screenshot {
  filter: var(--grayscale);
}

/* Guide line */
/* * { */
/* border: 1px solid black; */
/* background-color: black;
    color: blanchedalmond; */
/* } */

html {
  min-width: 360px;
  scroll-behavior: smooth;
  max-width: 1100px;
  margin-left: auto;
  margin-right: auto;
}

header,
main,
footer {
  min-width: 300px;
}

body {
  background-color: var(--background-color);
  color: var(--text-color);
  border: 5px solid var(--border-color);
  margin: 5px;
  min-width: 300px;
}

h3,
.navBarLinks a {
  font-weight: bold;
}

footer span{
  font-style: italic;
  font-weight: bold;
}

.content,
.about,
.aboutText,
.projects,
.project2,
.project1,
.resume,
.resumeText,
.contact,
.contactText {
  margin: 10px;
  padding: 5px;
}

.title {
  padding: 30px;
  margin: 10px;
}

.title h1,
.title h2,
.title h4 {
  font-family: "Press Start 2P", cursive;
  line-height: 1.6;
}

.location {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

/* .location h4 {
    text-align: center;
} */

/* #locationPin {
    justify-content: center;
} */

.navBar,
.content,
footer {
  font-family: "Source Code Pro", monospace;
}

.navBarLinks {
  margin-left: 30px;
  margin-right: 0px;
  padding-left: 0px;
}
.darkmodeButton {
  margin-left: 5px;
  margin-right: 30px;
  padding-top: 5px;
}

.navBar {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  background-color: var(--navBar-background-color);
  margin: 0px;
  padding: 6px 5px 10px 5px;
  z-index: 100;
}

.navBarLinks {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
}

.navBarDarkModeIcon {
  display: flex;
  justify-content: center;
  align-items: center;
}

.navBarLinks a {
  color: var(--navBarA-color);
  text-align: center;
  padding-left: 5px;
  padding-right: 5px;
  padding-top: 22px;
  padding-bottom: 22px;
  text-decoration: none;
  font-size: 12px;
}

.navBarLinks a:hover {
  background-color: #ddd;
  color: black;
}

.navBarLinks a:active {
  background-color: #04aa6d;
  color: white;
}

h3 {
  text-align: center;
  font-size: 22px;
  margin-top: 45px;
  margin-bottom: 45px;
}

.aboutText img {
  border: 2px solid var(--border-color);
  border-radius: 10%;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.screenshot {
  border: 2px solid var(--border-color);
  border-radius: 3%;
  display: block;
  margin-left: auto;
  margin-right: auto;
  -webkit-transform: scale(1);
	transform: scale(1);
	-webkit-transition: .3s ease-in-out;
	transition: .3s ease-in-out;
}

.screenshot:hover {
  -webkit-transform: scale(1.1);
	transform: scale(1.1);
}

/* .screenshot:hover {
  -moz-box-shadow: 20px 20px 30px #ccc;
  -webkit-box-shadow: 20px 20px 30px #ccc;
  box-shadow: 20px 20px 30px #ccc;  
} */

.gitRepo, .item1, .item3, .item5 {
  display: block;
  margin: 30px auto;
  -webkit-transform: rotate(0) scale(1);
  transform: rotate(0) scale(1);
	-webkit-transition: .3s ease-in-out;
	transition: .3s ease-in-out;
}

.gitRepo:hover, .item1:hover, .item3:hover, .item5:hover {
  -webkit-transform: rotate(15deg) scale(1.3);
  transform: rotate(15deg) scale(1.3);
}

/* .contactText {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr 1fr;
} */

.contactText a {
  text-decoration: none;
  font-size: 30px;
  color: var(--text-color);
}

.contactText a:hover {
  font-size: 40px;
  color: chocolate;
  transition: 500ms;
}

.footerMessage {
  text-align: center;
  margin: 10px;
  padding: 5px;
}
.navBarDarkModeIcon {
  /* position: -webkit-sticky;
  position: sticky;
  bottom: 25px;
  display: flex;
  justify-content: flex-end;
  z-index: 99; */

  /* position: fixed;
  bottom: 30px;
  right: 10px; */
  
  /* background-color: rgb(230, 205, 174, 0.5); */
  background-color: var(--dark-mode-button-background-color);
  border-radius: 50%;
}
#switch {
  background-color: transparent;
  /* background-color: rgb(51,51,51,0.3); */
  border: none;
  cursor: pointer;
}

@media (max-width: 414px) {
  #linkedinLinkText,
  #githubLinkText,
  #emailLinkText {
    display: none;
  }
  .contactText {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr;
  }
  .contactTitle {
    grid-column: 1 / span 3;
    grid-row: 1 / span 1;
  }
  .item1 {
    grid-column: 1 / span 1;
    grid-row: 2 / span 1;
  }
  .item3 {
    grid-column: 2 / span 1;
    grid-row: 2 / span 1;
  }
  .item5 {
    grid-column: 3 / span 1;
    grid-row: 2 / span 1;
  }
  .item1,
  .item3,
  .item5 {
    display: flex;
    justify-content: center;
    align-items: center;
  }
}

@media (min-width: 415px) {
  body {
    border: 10px solid var(--border-color);
    margin: 20px;
  }
  .title {
    padding: 55px;
    margin: 30px;
  }
  h1 {
    font-size: 70px;
  }
  h2 {
    text-align: right;
    margin-top: 70px;
    font-size: 45px;
  }
  .location h4 {
    text-align: right;
    font-size: 35px;
  }
  .location img {
    width: 60px;
    height: auto;
  }
  .location {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    flex-direction: row;
  }
  .navBar {
    display: flex;
    justify-content: center;
    padding-top: 4px;
    padding-bottom: 5px;
  }
  .navBarLinks a {
    font-size: 30px;
    padding-left: 27px;
    padding-right: 27px;
  }
  h3 {
    text-align: left;
    font-size: 45px;
  }
  .skills li,
  .skills h4 {
    font-size: 35px;
  }
  .aboutText img {
    border: 4px solid var(--border-color);
    width: 250px;
    height: 250px;
  }
  .screenshot {
    border: 4px solid var(--border-color);
    border-radius: 1%;
    width: 90%;
    height: auto;
  }
  .gitRepo {
    width: 55px;
    height: 55px;
  }
  .contactText {
    display: grid;
    grid-template-columns: 3fr 20fr 0.5fr;
    grid-template-rows: 1fr 1fr 1fr 1fr;
  }
  .contactTitle {
    grid-column: 1 / span 2;
  }
  .item1 {
    grid-row: 2 / span 1;
    grid-column: 1 / span 1;
  }
  .item2 {
    grid-row: 2 / span 1;
    grid-column: 2 / span 1;
  }
  .item3 {
    grid-row: 3 / span 1;
    grid-column: 1 / span 1;
  }
  .item4 {
    grid-row: 3 / span 1;
    grid-column: 2 / span 1;
  }
  .item5 {
    grid-row: 4 / span 1;
    grid-column: 1 / span 1;
  }
  .item6 {
    grid-row: 4 / span 1;
    grid-column: 2 / span 1;
  }
  .item1,
  .item3,
  .item5 {
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .item2,
  .item4,
  .item6 {
    display: flex;
    /* justify-content: center; */
    align-items: center;
  }
  p {
    font-size: 30px;
    margin-left: 20px;
    margin-right: 20px;
  }
  .skills li {
    margin-left: 20px;
  }
  .navBarDarkModeIcon img {
    width: 60px;
    height: auto;
  }
  .navBarDarkModeIcon {
    bottom: 55px;
    right: 37px;
  }
}

